feat: add preview for detail history

--- a/app/src/main/res/layout/fragment_detail_history.xml
+++ b/app/src/main/res/layout/fragment_detail_history.xml
@@ -75,10 +75,20 @@
                 android:text=""
                 android:textAlignment="textStart"
                 android:textColor="@color/g_black"
-                app:layout_constraintEnd_toStartOf="@id/menu_icon"
+                app:layout_constraintEnd_toStartOf="@id/button_preview"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toEndOf="@id/button_back"
                 app:layout_constraintTop_toTopOf="parent" />
+
+            <ImageView
+                android:id="@+id/button_preview"
+                android:layout_width="28dp"
+                android:layout_height="28dp"
+                android:layout_marginEnd="4dp"
+                android:src="@drawable/ic_file_open"
+                app:layout_constraintTop_toTopOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/menu_icon"
+                app:layout_constraintBottom_toBottomOf="parent"/>
 
             <ImageView
                 android:id="@+id/menu_icon"
