feat: change descript product quantity in pdf and receipt. fix: update product and add stock

--- a/app/src/main/res/layout/fragment_add_product_prices.xml
+++ b/app/src/main/res/layout/fragment_add_product_prices.xml
@@ -105,7 +105,7 @@
                 style="@style/blueButtonStyle"
                 android:layout_width="match_parent"
                 android:layout_height="@dimen/medium_button_height"
-                android:text="Tambahkan Harga" />
+                android:text="Tambahkan Harga Satuan" />
 
         </LinearLayout>
 
