--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -1,72 +1,136 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:layout_marginTop="16dp"
-    android:layout_marginHorizontal="20dp"
     tools:context=".ui.product.AddProductFragment">
 
-    <EditText
-        android:id="@+id/product_name_text_field"
+    <androidx.cardview.widget.CardView
+        android:id="@+id/toolbar_detail_history"
+        app:cardElevation="5dp"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_text_height"
-        android:layout_marginBottom="10dp"
-        android:paddingHorizontal="10dp"
-        style="@style/h4"
-        android:hint="Nama Produk" />
+        android:layout_height="50dp">
 
-    <EditText
-        style="@style/h4"
-        android:id="@+id/supplier_text_field"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_inside_1"
+                app:layout_constraintGuide_percent="0.09"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+
+            <androidx.constraintlayout.widget.Guideline
+                android:id="@+id/guideline_inside_2"
+                app:layout_constraintGuide_percent="0.91"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:orientation="vertical" />
+
+            <ImageButton
+                android:id="@+id/button_back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="55dp"
+                android:layout_height="50dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="Back"
+                android:src="@drawable/ic_back" />
+
+            <TextView
+                android:id="@+id/text_transaction_detail"
+                style="@style/h4_bold"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline_inside_2"
+                app:layout_constraintStart_toEndOf="@id/button_back"
+                app:layout_constraintTop_toTopOf="parent"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="5dp"
+                android:layout_marginEnd="12dp"
+                android:ellipsize="end"
+                android:maxLines="1"
+                android:text="Tambah Produk"
+                android:textAlignment="center"
+                android:textColor="@color/g_black" />
+
+
+        </androidx.constraintlayout.widget.ConstraintLayout>
+    </androidx.cardview.widget.CardView>
+
+    <LinearLayout
         android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_text_height"
-        android:layout_marginBottom="10dp"
-        android:paddingHorizontal="10dp"
-        android:hint="Nama Supplier" />
+        android:layout_height="match_parent"
+        android:layout_marginHorizontal="20dp"
+        android:layout_marginTop="16dp"
+        android:orientation="vertical">
 
-    <EditText
-        android:id="@+id/capital_price_text_field"
-        style="@style/h4"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_text_height"
-        android:layout_marginBottom="10dp"
-        android:hint="Harga Modal"
-        android:inputType="number"
-        android:paddingHorizontal="10dp" />
+        <EditText
+            android:id="@+id/product_name_text_field"
+            style="@style/h4"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/edit_text_height"
+            android:layout_marginBottom="10dp"
+            android:hint="Nama Produk"
+            android:paddingHorizontal="10dp" />
 
-    <AutoCompleteTextView
-        style="@style/h4"
-        android:id="@+id/unit_dropdown"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/edit_text_height"
-        android:paddingHorizontal="10dp"
-        android:layout_marginBottom="10dp"
-        android:hint="Satuan Terkecil (Cont. pcs, meter)"/>
+        <EditText
+            android:id="@+id/supplier_text_field"
+            style="@style/h4"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/edit_text_height"
+            android:layout_marginBottom="10dp"
+            android:hint="Nama Supplier"
+            android:paddingHorizontal="10dp" />
 
-    <EditText
-        style="@style/h4"
-        android:id="@+id/notes_text_field"
-        android:layout_width="match_parent"
-        android:layout_height="80dp"
-        android:layout_marginTop="0dp"
-        android:paddingHorizontal="10dp"
-        android:hint="Catatan"
-        android:inputType="text|textMultiLine" />
+        <EditText
+            android:id="@+id/capital_price_text_field"
+            style="@style/h4"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/edit_text_height"
+            android:layout_marginBottom="10dp"
+            android:hint="Harga Modal"
+            android:inputType="number"
+            android:paddingHorizontal="10dp" />
 
-    <androidx.appcompat.widget.AppCompatButton
-        android:id="@+id/button_add_product"
-        android:layout_width="match_parent"
-        android:layout_height="@dimen/medium_button_height"
-        style="@style/blueButtonStyle"
-        android:layout_gravity="bottom"
-        android:layout_marginTop="30dp"
-        android:text="Tambah Produk" />
+        <AutoCompleteTextView
+            android:id="@+id/unit_dropdown"
+            style="@style/h4"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/edit_text_height"
+            android:layout_marginBottom="10dp"
+            android:hint="Satuan Terkecil (Cont. pcs, meter)"
+            android:paddingHorizontal="10dp" />
 
-    <ProgressBar
-        android:id="@+id/add_product_progress_bar"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_gravity="top|center"/>
+        <EditText
+            android:id="@+id/notes_text_field"
+            style="@style/h4"
+            android:layout_width="match_parent"
+            android:layout_height="80dp"
+            android:layout_marginTop="0dp"
+            android:hint="Catatan"
+            android:inputType="text|textMultiLine"
+            android:paddingHorizontal="10dp" />
+
+        <androidx.appcompat.widget.AppCompatButton
+            android:id="@+id/button_add_product"
+            style="@style/blueButtonStyle"
+            android:layout_width="match_parent"
+            android:layout_height="@dimen/medium_button_height"
+            android:layout_gravity="bottom"
+            android:layout_marginTop="30dp"
+            android:text="Tambah Produk" />
+
+        <ProgressBar
+            android:id="@+id/add_product_progress_bar"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_gravity="top|center" />
+    </LinearLayout>
 </LinearLayout>
