--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -24,85 +24,85 @@
 
         <TextView
             android:id="@+id/logo_text"
+            style="@style/h4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/h4"
             android:layout_marginTop="120dp"
             android:drawableStart="@drawable/ic_kleine_shape"
             android:drawablePadding="6dp"
-            app:layout_constraintStart_toStartOf="@id/guideline_login_left"
-            app:layout_constraintTop_toTopOf="parent"
             android:text="Toko Plastik Haji Ali"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@id/guideline_login_left"
+            app:layout_constraintTop_toTopOf="parent" />
 
         <TextView
             android:id="@+id/login_text"
+            style="@style/h3"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/h3"
             android:layout_marginTop="20dp"
-            app:layout_constraintTop_toBottomOf="@id/logo_text"
-            app:layout_constraintStart_toStartOf="@id/guideline_login_left"
             android:text="Login."
             android:textSize="35sp"
-            android:textStyle="bold" />
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@id/guideline_login_left"
+            app:layout_constraintTop_toBottomOf="@id/logo_text" />
 
         <EditText
             android:id="@+id/email_text_field"
+            style="@style/editText"
             android:layout_width="0dp"
             android:layout_height="@dimen/edit_text_height"
-            app:layout_constraintStart_toStartOf="@id/guideline_login_left"
-            app:layout_constraintEnd_toEndOf="@id/guideline_login_right"
-            app:layout_constraintTop_toBottomOf="@id/login_text"
-            style="@style/editText"
-            android:inputType="textEmailAddress"
-            android:hint="E-mail"
             android:layout_marginTop="20dp"
-            android:padding="10dp"/>
+            android:hint="E-mail"
+            android:inputType="textEmailAddress"
+            android:padding="10dp"
+            app:layout_constraintEnd_toEndOf="@id/guideline_login_right"
+            app:layout_constraintStart_toStartOf="@id/guideline_login_left"
+            app:layout_constraintTop_toBottomOf="@id/login_text" />
 
         <EditText
             android:id="@+id/password_text_field"
+            style="@style/editText"
             android:layout_width="0dp"
             android:layout_height="@dimen/edit_text_height"
-            app:layout_constraintStart_toStartOf="@id/guideline_login_left"
-            app:layout_constraintEnd_toEndOf="@id/guideline_login_right"
-            app:layout_constraintTop_toBottomOf="@id/email_text_field"
-            style="@style/editText"
-            android:inputType="textPassword"
-            android:hint="Password"
             android:layout_marginTop="20dp"
-            android:padding="10dp"/>
+            android:hint="Password"
+            android:inputType="textPassword"
+            android:padding="10dp"
+            app:layout_constraintEnd_toEndOf="@id/guideline_login_right"
+            app:layout_constraintStart_toStartOf="@id/guideline_login_left"
+            app:layout_constraintTop_toBottomOf="@id/email_text_field" />
 
         <TextView
             android:id="@+id/forgot_password"
+            style="@style/h4"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            style="@style/h4"
-            app:layout_constraintStart_toStartOf="@id/guideline_login_left"
-            app:layout_constraintTop_toBottomOf="@id/password_text_field"
             android:layout_marginTop="20dp"
             android:text="Lupa Password?"
-            android:textColor="@color/black" />
+            android:textColor="@color/black"
+            app:layout_constraintStart_toStartOf="@id/guideline_login_left"
+            app:layout_constraintTop_toBottomOf="@id/password_text_field" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/button_login"
-            android:layout_width="@dimen/medium_button_width"
-            android:layout_height="@dimen/medium_button_height"
             style="@style/blueButtonStyle"
-            app:layout_constraintTop_toBottomOf="@id/forgot_password"
-            app:layout_constraintEnd_toEndOf="@id/guideline_login_right"
+            android:layout_width="0dp"
+            android:layout_height="@dimen/medium_button_height"
             android:layout_marginTop="30dp"
             android:text="Login"
-            android:textSize="@dimen/h3TextSize" />
+            app:layout_constraintEnd_toEndOf="@id/guideline_login_right"
+            app:layout_constraintStart_toStartOf="@id/guideline_login_left"
+            app:layout_constraintTop_toBottomOf="@id/forgot_password" />
 
         <ProgressBar
             android:id="@+id/login_progress_bar"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             app:layout_constraintBottom_toBottomOf="parent"
-            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintEnd_toEndOf="parent" />
+            app:layout_constraintTop_toTopOf="parent" />
 
     </androidx.constraintlayout.widget.ConstraintLayout>
 
