feat: adjust navigation bar margin bottom and add product position (when navigation bar android is active)

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
+    <dimen name="default_margin">40dp</dimen>
     <dimen name="buttonCorners">15dp</dimen>
     <dimen name="welcomeTextMargin">115dp</dimen>
     <dimen name="smallButtonWidth">130dp</dimen>
