fix layout bug in product and checkout, feat: add lowest unit quantity in cart

--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <dimen name="default_margin">40dp</dimen>
+    <dimen name="totalCardViewMargin">26dp</dimen>
+    <dimen name="add_button_margin">40dp</dimen>
     <dimen name="buttonCorners">15dp</dimen>
     <dimen name="welcomeTextMargin">115dp</dimen>
     <dimen name="smallButtonWidth">130dp</dimen>
