--- a/app/src/main/res/layout/fragment_add_product.xml
+++ b/app/src/main/res/layout/fragment_add_product.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
@@ -9,11 +9,11 @@
 
     <androidx.cardview.widget.CardView
         android:id="@+id/toolbar_detail_history"
+        android:layout_width="match_parent"
+        android:layout_height="50dp"
         app:cardElevation="5dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_width="match_parent"
-        android:layout_height="50dp">
+        app:layout_constraintTop_toTopOf="parent">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:layout_width="match_parent"
@@ -21,35 +21,31 @@
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline_inside_1"
-                app:layout_constraintGuide_percent="0.09"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" />
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.09" />
 
             <androidx.constraintlayout.widget.Guideline
                 android:id="@+id/guideline_inside_2"
-                app:layout_constraintGuide_percent="0.91"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:orientation="vertical" />
+                android:orientation="vertical"
+                app:layout_constraintGuide_percent="0.91" />
 
             <ImageButton
                 android:id="@+id/button_back"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="55dp"
                 android:layout_height="50dp"
                 android:background="?attr/selectableItemBackgroundBorderless"
                 android:contentDescription="Back"
-                android:src="@drawable/ic_back" />
+                android:src="@drawable/ic_back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:id="@+id/text_transaction_detail"
                 style="@style/h4_bold"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/guideline_inside_2"
-                app:layout_constraintStart_toEndOf="@id/button_back"
-                app:layout_constraintTop_toTopOf="parent"
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginStart="5dp"
@@ -58,79 +54,90 @@
                 android:maxLines="1"
                 android:text="Tambah Produk"
                 android:textAlignment="center"
-                android:textColor="@color/g_black" />
+                android:textColor="@color/g_black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="@id/guideline_inside_2"
+                app:layout_constraintStart_toEndOf="@id/button_back"
+                app:layout_constraintTop_toTopOf="parent" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
     </androidx.cardview.widget.CardView>
 
-    <LinearLayout
+    <androidx.core.widget.NestedScrollView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:layout_marginHorizontal="20dp"
-        android:layout_marginTop="16dp"
-        android:orientation="vertical">
+        android:fillViewport="true">
 
-        <EditText
-            android:id="@+id/product_name_text_field"
-            style="@style/h4"
+        <LinearLayout
             android:layout_width="match_parent"
-            android:layout_height="@dimen/edit_text_height"
-            android:layout_marginBottom="10dp"
-            android:hint="Nama Produk"
-            android:paddingHorizontal="10dp" />
-
-        <EditText
-            android:id="@+id/supplier_text_field"
-            style="@style/h4"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/edit_text_height"
-            android:layout_marginBottom="10dp"
-            android:hint="Nama Supplier"
-            android:paddingHorizontal="10dp" />
-
-        <EditText
-            android:id="@+id/capital_price_text_field"
-            style="@style/h4"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/edit_text_height"
-            android:layout_marginBottom="10dp"
-            android:hint="Harga Modal"
-            android:inputType="number"
-            android:paddingHorizontal="10dp" />
-
-        <AutoCompleteTextView
-            android:id="@+id/unit_dropdown"
-            style="@style/h4"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/edit_text_height"
-            android:layout_marginBottom="10dp"
-            android:hint="Satuan Terkecil (Cont. pcs, meter)"
-            android:paddingHorizontal="10dp" />
-
-        <EditText
-            android:id="@+id/notes_text_field"
-            style="@style/h4"
-            android:layout_width="match_parent"
-            android:layout_height="80dp"
-            android:layout_marginTop="0dp"
-            android:hint="Catatan"
-            android:inputType="text|textMultiLine"
-            android:paddingHorizontal="10dp" />
-
-        <androidx.appcompat.widget.AppCompatButton
-            android:id="@+id/button_add_product"
-            style="@style/blueButtonStyle"
-            android:layout_width="match_parent"
-            android:layout_height="@dimen/medium_button_height"
-            android:layout_gravity="bottom"
-            android:layout_marginTop="30dp"
-            android:text="Tambah Produk" />
-
-        <ProgressBar
-            android:id="@+id/add_product_progress_bar"
-            android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_gravity="top|center" />
-    </LinearLayout>
+            android:layout_marginHorizontal="20dp"
+            android:layout_marginTop="16dp"
+            android:orientation="vertical">
+
+            <EditText
+                android:id="@+id/product_name_text_field"
+                style="@style/h4"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/edit_text_height"
+                android:layout_marginBottom="10dp"
+                android:hint="Nama Produk"
+                android:paddingHorizontal="10dp" />
+
+            <EditText
+                android:id="@+id/supplier_text_field"
+                style="@style/h4"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/edit_text_height"
+                android:layout_marginBottom="10dp"
+                android:hint="Nama Supplier"
+                android:paddingHorizontal="10dp" />
+
+            <EditText
+                android:id="@+id/capital_price_text_field"
+                style="@style/h4"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/edit_text_height"
+                android:layout_marginBottom="10dp"
+                android:hint="Harga Modal"
+                android:inputType="number"
+                android:paddingHorizontal="10dp" />
+
+            <AutoCompleteTextView
+                android:id="@+id/unit_dropdown"
+                style="@style/h4"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/edit_text_height"
+                android:layout_marginBottom="10dp"
+                android:hint="Satuan Terkecil (Cont. pcs, meter)"
+                android:paddingHorizontal="10dp" />
+
+            <EditText
+                android:id="@+id/notes_text_field"
+                style="@style/h4"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginTop="0dp"
+                android:hint="Catatan"
+                android:inputType="text|textMultiLine"
+                android:minLines="2"
+                android:paddingHorizontal="10dp" />
+
+            <androidx.appcompat.widget.AppCompatButton
+                android:id="@+id/button_add_product"
+                style="@style/blueButtonStyle"
+                android:layout_width="match_parent"
+                android:layout_height="@dimen/medium_button_height"
+                android:layout_marginTop="30dp"
+                android:layout_marginBottom="16dp"
+                android:text="Tambah Produk" />
+
+            <ProgressBar
+                android:id="@+id/add_product_progress_bar"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_gravity="top|center" />
+        </LinearLayout>
+    </androidx.core.widget.NestedScrollView>
 </LinearLayout>
