--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -5,6 +5,7 @@
     android:id="@+id/dashboardFragment"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:layout_marginBottom="90dp"
     tools:context=".ui.home.DashboardFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
