--- a/app/src/main/res/layout/fragment_history.xml
+++ b/app/src/main/res/layout/fragment_history.xml
@@ -18,7 +18,7 @@
         app:iconifiedByDefault="false"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:queryHint="Cari Nama Produk / Supplier..." />
+        app:queryHint="Cari Nama Customer / Tanggal Transaksi..." />
 
     <ImageView
         android:id="@+id/close_icon"
