--- a/app/src/main/res/layout/fragment_customer.xml
+++ b/app/src/main/res/layout/fragment_customer.xml
@@ -59,6 +59,17 @@
                 android:orientation="vertical"
                 app:layout_constraintGuide_percent="0.91" />
 
+            <ImageButton
+                android:id="@+id/button_back"
+                android:layout_width="50dp"
+                android:layout_height="50dp"
+                android:background="?attr/selectableItemBackgroundBorderless"
+                android:contentDescription="Back"
+                android:src="@drawable/ic_back"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+
             <TextView
                 android:id="@+id/text_customer_detail"
                 style="@style/h4_bold"
@@ -130,7 +141,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_marginEnd="30dp"
-        android:layout_marginBottom="50dp"
+        android:layout_marginBottom="30dp"
         android:backgroundTint="@color/black"
         android:contentDescription="Tambah Data Pelanggan"
         android:src="@drawable/ic_plus"
