--- a/app/src/main/res/layout/bottom_sheet_customer_sort.xml
+++ b/app/src/main/res/layout/bottom_sheet_customer_sort.xml
@@ -57,78 +57,39 @@
             app:layout_constraintTop_toTopOf="parent" />
 
 
-        <androidx.constraintlayout.widget.ConstraintLayout
+        <RadioGroup
             android:id="@+id/sort_radio_group_layout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:orientation="horizontal"
+            app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@id/sort_by_text">
-
+            app:layout_constraintTop_toTopOf="parent">
 
             <RadioButton
                 android:id="@+id/ascending_customer_name_sort_button"
-                style="@style/h4"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
-                android:layout_marginEnd="4dp"
+                android:layout_marginEnd="8dp"
+                android:layout_weight="1"
                 android:background="@drawable/radio_selector"
                 android:button="@null"
                 android:gravity="center"
                 android:text="Nama Pelanggan A-Z"
-                android:textColor="@drawable/radio_text_selector"
-                app:layout_constraintBottom_toTopOf="@id/descending_customer_name_sort_button"
-                app:layout_constraintEnd_toStartOf="@id/highest_price_modal_sort_button"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
+                android:textColor="@drawable/radio_text_selector" />
 
             <RadioButton
                 android:id="@+id/descending_customer_name_sort_button"
-                style="@style/h4"
                 android:layout_width="0dp"
                 android:layout_height="35dp"
+                android:layout_marginStart="8dp"
+                android:layout_weight="1"
                 android:background="@drawable/radio_selector"
                 android:button="@null"
                 android:gravity="center"
                 android:text="Nama Pelanggan Z-A"
-                android:textColor="@drawable/radio_text_selector"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="@id/ascending_customer_name_sort_button"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/ascending_customer_name_sort_button" />
-
-            <RadioButton
-                android:id="@+id/highest_price_modal_sort_button"
-                style="@style/h4"
-                android:layout_width="0dp"
-                android:layout_height="35dp"
-                android:background="@drawable/radio_selector"
-                android:button="@null"
-                android:gravity="center"
-                android:text="Harga Tertinggi"
-                android:textColor="@drawable/radio_text_selector"
-                app:layout_constraintBottom_toBottomOf="@id/ascending_customer_name_sort_button"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toEndOf="@id/ascending_customer_name_sort_button"
-                app:layout_constraintTop_toTopOf="@id/ascending_customer_name_sort_button" />
-
-            <RadioButton
-                android:id="@+id/lowest_price_modal_sort_button"
-                style="@style/h4"
-                android:layout_width="0dp"
-                android:layout_height="35dp"
-                android:layout_marginBottom="8dp"
-                android:background="@drawable/radio_selector"
-                android:button="@null"
-                android:gravity="center"
-                android:text="Harga Terendah"
-                android:textColor="@drawable/radio_text_selector"
-                app:layout_constraintBottom_toBottomOf="parent"
-                app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintStart_toStartOf="@id/highest_price_modal_sort_button"
-                app:layout_constraintTop_toTopOf="@id/descending_customer_name_sort_button" />
-
-        </androidx.constraintlayout.widget.ConstraintLayout>
+                android:textColor="@drawable/radio_text_selector" />
+        </RadioGroup>
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/doneButton"
