--- a/app/src/main/res/layout/cart_item_layout.xml
+++ b/app/src/main/res/layout/cart_item_layout.xml
@@ -11,10 +11,22 @@
         android:background="@drawable/card_border"
         android:padding="16dp">
 
+        <TextView
+            android:id="@+id/cart_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text="1."
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="parent"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/product_data"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:layout_marginTop="8dp"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/modal_price">
 
@@ -67,55 +79,72 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintTop_toTopOf="parent" />
 
-        <TextView
-            android:layout_width="wrap_content"
+        <androidx.constraintlayout.widget.ConstraintLayout
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_gravity="end"
-            android:text="x"
-            android:layout_marginBottom="2dp"
-            app:layout_constraintTop_toTopOf="@id/priceEdit"
-            app:layout_constraintBottom_toBottomOf="@id/priceEdit"
-            app:layout_constraintStart_toEndOf="@id/quantityLayout"
-            app:layout_constraintEnd_toStartOf="@id/priceEdit"/>
-
-        <TextView
-            android:id="@+id/total_price"
-            style="@style/h4_bold"
-            android:layout_width="100dp"
-            android:layout_height="wrap_content"
-            android:layout_marginBottom="2dp"
-            android:text="Rp100.000.000"
+            app:layout_constraintBottom_toBottomOf="@id/quantityLayout"
             app:layout_constraintEnd_toEndOf="parent"
-            app:layout_constraintTop_toTopOf="@id/priceEdit"
-            app:layout_constraintBottom_toBottomOf="@id/priceEdit"
-            android:textAlignment="textStart"
-            android:textColor="@color/black" />
-
-
-        <TextView
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:text="="
-            android:layout_marginBottom="2dp"
-            app:layout_constraintTop_toTopOf="@id/total_price"
-            app:layout_constraintBottom_toBottomOf="@id/total_price"
-            app:layout_constraintStart_toEndOf="@id/priceEdit"
-            app:layout_constraintEnd_toStartOf="@id/total_price"/>
-
-        <EditText
-            android:id="@+id/priceEdit"
-            style="@style/h4"
-            android:layout_width="90dp"
-            android:layout_height="wrap_content"
-            android:hint="100.000.000"
-            android:inputType="numberDecimal"
-            android:maxLength="11"
-            android:textAlignment="textEnd"
-            android:textColor="@color/black"
-            app:layout_constraintEnd_toStartOf="@id/total_price"
             app:layout_constraintStart_toEndOf="@id/quantityLayout"
-            app:layout_constraintTop_toTopOf="@id/quantityLayout"
-            app:layout_constraintBottom_toBottomOf="@id/quantityLayout"/>
+            app:layout_constraintTop_toTopOf="@id/quantityLayout">
+
+            <TextView
+                android:id="@+id/xText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="8dp"
+                android:layout_marginEnd="6dp"
+                android:layout_marginBottom="2dp"
+                android:text="x"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/priceEdit"
+                app:layout_constraintHorizontal_chainStyle="spread_inside"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <EditText
+                android:id="@+id/priceEdit"
+                style="@style/h4"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:hint="100.000.000"
+                android:inputType="numberDecimal"
+                android:maxLength="11"
+                android:textAlignment="textEnd"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/equalText"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toEndOf="@id/xText"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/equalText"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:layout_marginStart="6dp"
+                android:layout_marginEnd="8dp"
+                android:layout_marginBottom="2dp"
+                android:text="="
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toStartOf="@id/total_price"
+                app:layout_constraintStart_toEndOf="@id/priceEdit"
+                app:layout_constraintTop_toTopOf="parent" />
+
+            <TextView
+                android:id="@+id/total_price"
+                style="@style/h4_bold"
+                android:layout_width="0dp"
+                android:layout_height="wrap_content"
+                android:layout_marginBottom="2dp"
+                android:text="100.000.000"
+                android:textAlignment="textStart"
+                android:textColor="@color/black"
+                app:layout_constraintBottom_toBottomOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintHorizontal_weight="1"
+                app:layout_constraintStart_toEndOf="@id/equalText"
+                app:layout_constraintTop_toTopOf="parent" />
+        </androidx.constraintlayout.widget.ConstraintLayout>
 
         <LinearLayout
             android:id="@+id/lowest_unit_layout"
