--- a/app/src/main/res/layout/fragment_product_detail.xml
+++ b/app/src/main/res/layout/fragment_product_detail.xml
@@ -340,6 +340,7 @@
                 android:layout_width="0dp"
                 android:layout_height="wrap_content"
                 android:layout_marginTop="30dp"
+                android:padding="4dp"
                 app:layout_constraintEnd_toStartOf="@id/guideline_2"
                 app:layout_constraintStart_toEndOf="@id/guideline_1"
                 app:layout_constraintTop_toBottomOf="@id/notesLayout">
