--- a/app/src/main/res/layout/history_list_layout.xml
+++ b/app/src/main/res/layout/history_list_layout.xml
@@ -14,10 +14,21 @@
         android:paddingHorizontal="8dp"
         android:paddingVertical="16dp">
 
+        <TextView
+            android:id="@+id/history_number"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:textColor="@color/black"
+            android:textSize="17sp"
+            android:textStyle="bold"
+            app:layout_constraintStart_toStartOf="@id/history_initial"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/history_initial"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:background="@drawable/circle_background"
             android:gravity="center"
@@ -25,28 +36,28 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/history_number" />
 
         <TextView
             android:id="@+id/customer_text"
             style="@style/h4_bold"
             android:layout_width="0dp"
-            android:layout_marginStart="10dp"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:layout_marginEnd="8dp"
             android:paddingBottom="2dp"
             android:text="Customer"
             android:textColor="@color/text_primary"
             app:layout_constraintEnd_toStartOf="@id/cap_lunas"
             app:layout_constraintStart_toEndOf="@id/history_initial"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/history_initial" />
 
         <TextView
             android:id="@+id/date_text"
             style="@style/p"
-            android:layout_marginStart="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:paddingBottom="2dp"
             android:text="19 Okt 2024"
             app:layout_constraintStart_toEndOf="@id/history_initial"
@@ -65,9 +76,9 @@
         <TextView
             android:id="@+id/balance_text"
             style="@style/p"
-            android:layout_marginStart="10dp"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginStart="10dp"
             android:text="Sisa"
             app:layout_constraintStart_toEndOf="@id/history_initial"
             app:layout_constraintTop_toBottomOf="@id/date_text" />
