--- a/app/src/main/res/layout/product_list_layout.xml
+++ b/app/src/main/res/layout/product_list_layout.xml
@@ -14,10 +14,23 @@
         android:paddingHorizontal="8dp"
         android:paddingVertical="16dp">
 
+        <TextView
+            android:id="@+id/product_number"
+            style="@style/h4_bold"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:text=""
+            android:textSize="17sp"
+            android:textColor="@color/black"
+            android:layout_marginBottom="8dp"
+            app:layout_constraintStart_toStartOf="@id/product_initial"
+            app:layout_constraintTop_toTopOf="parent" />
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/product_initial"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginTop="8dp"
             android:layout_marginStart="8dp"
             android:background="@drawable/circle_background"
             android:gravity="center"
@@ -25,7 +38,7 @@
             android:textSize="16sp"
             android:textStyle="bold"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toBottomOf="@id/product_number" />
 
         <TextView
             android:id="@+id/product_name_text"
@@ -37,7 +50,7 @@
             android:textColor="@color/text_primary"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@id/product_initial"
-            app:layout_constraintTop_toTopOf="parent" />
+            app:layout_constraintTop_toTopOf="@id/product_initial" />
 
         <TextView
             android:id="@+id/supplier_text"
