fix: button nav after back with button from product detail (move nav_product to nav_home)

--- a/app/src/main/res/navigation/nav_home.xml
+++ b/app/src/main/res/navigation/nav_home.xml
@@ -13,6 +13,9 @@
         <action
             android:id="@+id/action_productFragment_to_productDetailFragment"
             app:destination="@id/detailProductFragment" />
+        <action
+            android:id="@+id/action_productFragment_to_addProductFragment"
+            app:destination="@id/addProductFragment" />
     </fragment>
 
     <fragment
@@ -23,8 +26,7 @@
 
         <action
             android:id="@+id/action_transactionFragment_to_customerFragment"
-            app:destination="@id/customerFragment"
-            />
+            app:destination="@id/customerFragment" />
 
         <action
             android:id="@+id/action_transactionFragment_to_checkoutFragment"
@@ -40,6 +42,31 @@
     </fragment>
 
     <fragment
+        android:id="@+id/addProductFragment"
+        android:name="com.example.tokoplastik.ui.product.AddProductFragment"
+        android:label="fragment_add_product"
+        tools:layout="@layout/fragment_add_product">
+
+        <action
+            android:id="@+id/action_addProductFragment_to_addProductPricesFragment"
+            app:destination="@id/addProductPricesFragment" />
+    </fragment>
+    <fragment
+        android:id="@+id/addProductPricesFragment"
+        android:name="com.example.tokoplastik.ui.product.AddProductPricesFragment"
+        android:label="fragment_add_product_prices"
+        tools:layout="@layout/fragment_add_product_prices">
+
+        <argument
+            android:name="productId"
+            app:argType="integer" />
+
+        <action
+            android:id="@+id/action_addProductPricesFragment_to_detailProductFragment"
+            app:destination="@id/detailProductFragment" />
+    </fragment>
+
+    <fragment
         android:id="@+id/detailProductFragment"
         android:name="com.example.tokoplastik.ui.product.ProductDetailFragment"
         android:label="fragment_detail_product"
@@ -51,6 +78,9 @@
         <action
             android:id="@+id/action_detailProductFragment_to_stockFragment"
             app:destination="@id/stockFragment" />
+        <action
+            android:id="@+id/action_detailProductFragment_to_addProductPricesFragment"
+            app:destination="@id/addProductPricesFragment" />
     </fragment>
 
     <fragment
@@ -109,7 +139,7 @@
         tools:layout="@layout/fragment_update_customer">
         <argument
             android:name="customerId"
-            app:argType="integer"/>
+            app:argType="integer" />
         <action
             android:id="@+id/action_updateCustomerFragment_to_transactionFragment"
             app:destination="@id/transactionFragment" />
@@ -121,7 +151,12 @@
         tools:layout="@layout/fragment_stock">
         <argument
             android:name="productId"
-            app:argType="integer"/>
+            app:argType="integer" />
+
+        <action
+            android:id="@+id/action_stockFragment_to_detailProductFragment"
+            app:destination="@id/detailProductFragment"
+            />
     </fragment>
     <fragment
         android:id="@+id/customerFragment"
